--- a/index.html
+++ b/index.html
@@ -1,57 +1,22 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>امیرعلی اکبرزاده | ورزشکار هاپکیدو</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="images/favicon.png" />
+  <meta charset="UTF-8">
+  <title>امیرعلی اکبرزاده - هاپکیدو</title>
+  <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
   <header>
-    <nav>
-      <h1 class="logo">امیرعلی اکبرزاده</h1>
-      <ul>
-        <li><a href="#home">خانه</a></li>
-        <li><a href="#about">درباره</a></li>
-        <li><a href="#achievements">قهرمانی‌ها</a></li>
-        <li><a href="#contact">تماس</a></li>
-      </ul>
-    </nav>
+    <h1>امیرعلی اکبرزاده</h1>
+    <p>ورزشکار رشته هاپکیدو</p>
   </header>
-
-  <section id="home" class="hero animate">
-    <h2>قهرمان آینده هاپکیدو</h2>
-    <p>با تمرین، هدف و انگیزه به قله‌ها خواهم رسید.</p>
-  </section>
-
-  <section id="about" class="animate">
-    <h2>درباره من</h2>
-    <p>من امیرعلی اکبرزاده، متولد ۱۲ دی ۱۳۸۷ هستم. ورزشکار رشته هاپکیدو و با هدف شرکت در مسابقات بین‌المللی در حال تلاش شبانه‌روزی هستم.</p>
-  </section>
-
-  <section id="achievements" class="animate">
-    <h2>قهرمانی‌ها و افتخارات</h2>
+  <section>
+    <h2>شبکه‌ها</h2>
     <ul>
-      <li>مدال طلای مسابقات منطقه‌ای ۱۴۰۳</li>
-      <li>قهرمان نوجوانان استان</li>
-      <li>عضو تیم منتخب باشگاه هاپکیدو</li>
-    </ul>
-  </section>
-
-  <section id="contact" class="animate">
-    <h2>تماس با من</h2>
-    <ul class="contact-info">
+      <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/brave_amirali7">@brave_amirali7</a></li>
       <li><i class="fas fa-envelope"></i> <a href="mailto:qmir0919@gmail.com">qmir0919@gmail.com</a></li>
-      <li><i class="fab fa-instagram"></i> <a href="https://instagram.com/brave_amirali7" target="_blank">@brave_amirali7</a></li>
     </ul>
   </section>
-
-  <footer>
-    <p>© 2025 امیرعلی اکبرزاده - تمامی حقوق محفوظ است</p>
-  </footer>
-
 </body>
 </html>
